--- a/qingwei/res/values/strings.xml
+++ b/qingwei/res/values/strings.xml
@@ -5,6 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
     <string name="hello_world">Hello world!</string>
-    <string name="title_activity_item">ItemActivity</string>
+    <string name="title_activity_item">Thing</string>
 
 </resources>
