--- a/qingwei/res/values-zh-rCN/strings.xml
+++ b/qingwei/res/values-zh-rCN/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_refresh">"刷新"</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_item">"物品"</string>
+    <string name="buy">"购买"</string>
 
 </resources>
