--- a/qingwei/res/values/strings.xml
+++ b/qingwei/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="action_refresh">Refresh</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_item">Thing</string>
-
+    <string name="buy">"Buy Now"</string>
 </resources>
