--- a/qingwei/res/values/strings.xml
+++ b/qingwei/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">Wing</string>
     <string name="action_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
+    <string name="action_share">Share</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_item">Thing</string>
     <string name="buy">"Buy Now"</string>
