--- a/qingwei/res/values-zh-rCN/strings.xml
+++ b/qingwei/res/values-zh-rCN/strings.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Wing</string>
-    <string name="action_settings">"设置"</string>
+    <string name="app_name">百武西 Mini</string>
+    <string name="action_about">"关于"</string>
     <string name="action_refresh">"刷新"</string>
     <string name="action_share">"分享"</string>
+    <string name="action_feedback">"反馈"</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_item">"物品"</string>
     <string name="buy">"购买"</string>
