--- a/qingwei/res/values/strings.xml
+++ b/qingwei/res/values/strings.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Wing</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">MiniBioliving</string>
+    <string name="action_about">About</string>
     <string name="action_refresh">Refresh</string>
     <string name="action_share">Share</string>
+    <string name="action_feedback">Feedback</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_item">Thing</string>
     <string name="buy">"Buy Now"</string>
