--- a/qingwei/res/values/strings.xml
+++ b/qingwei/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_item">Thing</string>
     <string name="buy">"Buy Now"</string>
+    <string name="share_subject">"Take a look at this thing from bioliving."</string>
 </resources>
