--- a/qingwei/res/values-zh-rCN/strings.xml
+++ b/qingwei/res/values-zh-rCN/strings.xml
@@ -9,5 +9,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_item">"物品"</string>
     <string name="buy">"购买"</string>
-
+    <string name="share_subject">"这件百武西的东东看起来不错 :)"</string>
+    
 </resources>
