--- a/qingwei/res/values/strings.xml
+++ b/qingwei/res/values/strings.xml
@@ -11,6 +11,9 @@
     <string name="title_activity_about">About</string>
     <string name="buy">"Buy Now"</string>
     <string name="loading">Loading...</string>
+    <string name="home">Home</string>
+    <string name="browse">Browse</string>
+    <string name="settings">Settings</string>
     <string name="share_subject">"Take a look at this thing from bioliving."</string>
     <string name="title_card1">"品牌故事"</string>
     <string name="title_card2">"设计师寄语"</string>
