--- a/qingwei/res/values/strings.xml
+++ b/qingwei/res/values/strings.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">MiniBioliving</string>
+    <string name="app_name">BIOLIVING Mini</string>
     <string name="action_about">About</string>
     <string name="action_refresh">Refresh</string>
     <string name="action_share">Share</string>
     <string name="action_feedback">Feedback</string>
     <string name="hello_world">Hello world!</string>
-    <string name="title_activity_item">Thing</string>
+    <string name="title_activity_item">Item</string>
     <string name="title_activity_about">About</string>
     <string name="buy">"Buy Now"</string>
     <string name="loading">Loading...</string>
-    <string name="share_subject">"Take a look at this thing from bioliving."</string>
-    <string name="title_card1">"品牌故事"</string>
-    <string name="title_card2">"设计师寄语"</string>
-    <string name="title_card3">"设计理念"</string>
+    <string name="share_subject">"This item in BIOLIVING is pretty good!"</string>
+    <string name="title_card1">"BRAND STORY"</string>
+    <string name="title_card2">"FROM DESIGNER"</string>
+    <string name="title_card3">"DESIGN CONCEPT"</string>
     <string name="description_card1">"百武西是由一帮迷恋民国文艺的年轻设计师的梦想现实。\n这帮人，\n皂梦穿越，\n做最有中国味儿的华族生活品牌。"</string>
     <string name="description_card2">"“我们不知道如何表达文艺，只是内心总有想要表达的冲动涌现出来。”\n三零年代，中过文艺滥觞之时；百武西，迷恋彼时文艺同好者们的梦想现实。\n这帮乐天派从文字、音乐、色彩甚至是阳光中汲取营养，用内心的自觉，给服装带来新鲜，转而化为醍醐灌顶般的触动。"</string>
     <string name="description_card3">"三零年代是供养我们的灵感源泉——我们对于继往华族元素之厚、突来西方元素之博，都巧妙地糅合着；\n敏感、内敛又保持觉醒。"</string>
