--- a/qingwei/res/values-zh-rCN/strings.xml
+++ b/qingwei/res/values-zh-rCN/strings.xml
@@ -11,6 +11,7 @@
     <string name="title_activity_about">"关于"</string>
     <string name="buy">"购买"</string>
     <string name="loading">"努力加载中..."</string>
+    <string name="sellercats">"分类"</string>
     <string name="share_subject">"这件百武西的东东看起来不错 :)"</string>
     <string name="title_card1">"壹 品牌故事"</string>
     <string name="title_card2">"贰 设计师寄语"</string>
