--- a/qingwei/res/values/strings.xml
+++ b/qingwei/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="title_activity_about">About</string>
     <string name="buy">"Buy Now"</string>
     <string name="loading">Loading...</string>
+    <string name="sellercats">"Sellercats"</string>
     <string name="share_subject">"This item in BIOLIVING is pretty good!"</string>
     <string name="title_card1">"BRAND STORY"</string>
     <string name="title_card2">"FROM DESIGNER"</string>
